--- a/JAVA_Basic/JSD1603_XML/pom.xml
+++ b/JAVA_Basic/JSD1603_XML/pom.xml
@@ -4,10 +4,17 @@
   <artifactId>JSD1603_XML</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <dependencies>
-  	<dependency>
-  		<groupId>dom4j</groupId>
-  		<artifactId>dom4j</artifactId>
-  		<version>1.6.1</version>
-  	</dependency>
+<!--  	<dependency>-->
+<!--  		<groupId>dom4j</groupId>-->
+<!--  		<artifactId>dom4j</artifactId>-->
+<!--  		<version>2.1.3</version>-->
+<!--  	</dependency>-->
+      <!-- https://mvnrepository.com/artifact/org.dom4j/dom4j -->
+      <dependency>
+          <groupId>org.dom4j</groupId>
+          <artifactId>dom4j</artifactId>
+          <version>2.1.3</version>
+      </dependency>
+
   </dependencies>
 </project>
