--- a/JAVA_Basic/JSD1603_XML/pom.xml
+++ b/JAVA_Basic/JSD1603_XML/pom.xml
@@ -3,6 +3,10 @@
   <groupId>com.tedu</groupId>
   <artifactId>JSD1603_XML</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+    <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+    </properties>
   <dependencies>
 <!--  	<dependency>-->
 <!--  		<groupId>dom4j</groupId>-->
